# parrot

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  recording.html  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
native-core/: README.md
native-core/linux/: README.md
native-core/macos/: Package.resolved  Package.swift  README.md
native-core/macos/Sources/ParrotCore/: AudioRecorder.swift  CleanupOutputSanitizer.swift  ContextualPasteFormatter.swift  CoreService.swift  TextPaster.swift  (+13 more)
native-core/shared/: languages.json
native-core/shared/prompts/: cleanup-transcript.md
native-core/windows/: README.md
scripts/: build-native-core-macos.sh  build-whisper-framework-macos.sh  render-dmg-background.swift
src/: languages.ts  main.ts  recording.css  recording.ts  style.css
src-tauri/: Cargo.toml  Info.plist  ParrotCore.entitlements  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  recording.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: capture_shortcut.toml  delete_history_item.toml  get_app_snapshot.toml  permission_statuses.toml  request_permission.toml  save_recording_result.toml  set_hotkey_monitor_enabled.toml  start_test_dictation.toml  stop_test_dictation.toml  warm_models.toml
src-tauri/src/: commands.rs  core_bridge.rs  history.rs  lib.rs  main.rs  settings.rs  tray.rs
(+8 files in other folders)
